# 42-icecore-mass-spec

./: CMakeLists.txt  README.md  pyproject.toml
cpp/: CMakeLists.txt
cpp/bindings/: pybind_module.cpp
cpp/include/icecore_ms/: fft_utils.hpp  kalman_filter.hpp  signal_utils.hpp
cpp/src/: fft_utils.cpp  kalman_filter.cpp  signal_utils.cpp
src/icecore_ms/: __init__.py
src/icecore_ms/_core/: __init__.py
src/icecore_ms/climate/: __init__.py  adaptive_chunking.py  correlation.py  netcdf_loader.py  paleo_cycles.py
src/icecore_ms/mass_spec/: __init__.py  filtering.py
tests/: conftest.py  test_adaptive_chunking.py  test_kalman_filter.py  test_netcdf_loader.py
